modified font colors and blog section

--- a/v2/index.html
+++ b/v2/index.html
@@ -14,27 +14,27 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16">
           <div class="flex-shrink-0 flex items-center">
-            <h1 class="text-2xl font-bold text-gray-800">johnbthe.dev</h1>
+            <h1 class="text-2xl font-bold text-gray-900">johnbthe.dev</h1>
           </div>
           <div class="hidden lg:flex items-center">
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-blue-500"
               >Home</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-blue-500"
               >Blog</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-blue-500"
               >Portfolio</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-blue-500"
               >About</a
             >
           </div>
@@ -150,8 +150,8 @@
       <div class="flex mx-auto max-w-7xl">
         <div class="w-full m-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
           <div class="text-center w-full m-auto px-4 sm:px-6 lg:px-8 mb-16">
-            <h1 class="text-4xl font-bold mb-4">My Journey</h1>
-            <p class="text-lg">
+            <h1 class="text-4xl text-gray-900 font-bold mb-4">My Journey</h1>
+            <p class="text-lg text-gray-600">
               Follow along as I document and share my experiences
             </p>
             <div class="inline-flex items-center justify-center w-full">
@@ -176,77 +176,7 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col lg:items-start lg:flex-row lg:space-x-6">
-            <div
-              class="w-full flex items-center lg:pt-6 gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
-            >
-              <img
-                src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                alt=""
-                class="h-10 w-10 rounded-full bg-gray-50"
-              />
-              <div class="text-sm leading-6">
-                <p class="font-semibold text-gray-900">
-                  <a href="#"> John Bouakhasith </a>
-                </p>
-                <p class="text-gray-600">Posted on April 1st, 2023</p>
-              </div>
-            </div>
-            <div class="w-full mb-6">
-              <div
-                class="bg-white mb-6 border-gray-200 lg:border-l-4 overflow-hidden"
-              >
-                <div class="text-gray-900 lg:p-6">
-                  <h1 class="text-4xl text-gray-900 font-bold mb-4">
-                    Blog Post Header
-                  </h1>
-                  <p class="text-lg text-gray-600 mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed
-                    viverra. A cras semper auctor neque vitae tempus. Commodo
-                    nulla facilisi nullam vehicula ipsum a arcu cursus vitae.
-                    Fames ac turpis egestas maecenas pharetra convallis posuere
-                    morbi leo. Suscipit adipiscing bibendum est ultricies
-                    integer quis auctor elit sed. Morbi tristique senectus et
-                    netus et malesuada. Faucibus a pellentesque sit amet
-                    porttitor eget. Vivamus at augue eget arcu. Phasellus
-                    faucibus scelerisque eleifend donec pretium vulputate
-                    sapien.
-                  </p>
-                  <p class="text-lg text-gray-600 mb-4">
-                    Ac odio tempor orci dapibus ultrices in iaculis. Ipsum
-                    faucibus vitae aliquet nec ullamcorper sit amet risus
-                    nullam. Velit aliquet sagittis id consectetur purus ut
-                    faucibus. Habitant morbi tristique senectus et netus. In
-                    nulla posuere sollicitudin aliquam. Elementum pulvinar etiam
-                    non quam lacus suspendisse faucibus interdum posuere. Nunc
-                    congue nisi vitae suscipit tellus mauris a diam maecenas.
-                    Maecenas accumsan lacus vel facilisis volutpat est velit
-                    egestas. Morbi tincidunt ornare massa eget. Et tortor at
-                    risus viverra adipiscing at in tellus integer. Congue mauris
-                    rhoncus aenean vel elit scelerisque mauris.
-                  </p>
-                  <p class="text-lg text-gray-600 mb-4">
-                    Sed velit dignissim sodales ut eu sem integer vitae justo.
-                    Sit amet tellus cras adipiscing enim eu turpis egestas
-                    pretium. Ultrices tincidunt arcu non sodales neque. Sit amet
-                    dictum sit amet justo. Accumsan sit amet nulla facilisi
-                    morbi tempus iaculis urna id. Sodales neque sodales ut etiam
-                    sit amet nisl purus in. Pharetra sit amet aliquam id diam
-                    maecenas. Sapien eget mi proin sed libero enim sed faucibus
-                    turpis. Non pulvinar neque laoreet suspendisse interdum
-                    consectetur libero. Ut etiam sit amet nisl purus in. Aenean
-                    pharetra magna ac placerat.
-                  </p>
-                  <a href="#" class="text-blue-500 hover:text-blue-700"
-                    >Read more &rarr;</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="flex flex-col lg:items-start lg:flex-row lg:space-x-6">
+          <div class="flex flex-col lg:items-start lg:flex-row">
             <div
               class="w-full flex items-center lg:pt-6 gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
             >
@@ -264,9 +194,9 @@
             </div>
             <div class="w-full">
               <div
-                class="bg-white mb-6 border-gray-200 lg:border-l-4 overflow-hidden"
+                class="bg-white border-gray-200 lg:border-l-4 overflow-hidden"
               >
-                <div class="lg:p-6">
+                <div class="text-gray-900 lg:p-6">
                   <h1 class="text-4xl text-gray-900 font-bold mb-4">
                     Blog Post Header
                   </h1>
@@ -325,8 +255,10 @@
       <div class="w-full m-auto max-w-7xl py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
         <div class="w-full m-auto">
           <div class="text-center mb-16">
-            <h1 class="text-4xl font-bold mb-4">Portfolio</h1>
-            <p class="text-lg">Take a look at some of my recent projects</p>
+            <h1 class="text-4xl text-gray-900 font-bold mb-4">Portfolio</h1>
+            <p class="text-lg text-gray-600">
+              Take a look at some of my recent projects
+            </p>
             <div class="inline-flex items-center justify-center w-full">
               <hr
                 class="w-64 h-1 my-8 bg-gray-200 border-0 rounded dark:bg-gray-700"
@@ -358,95 +290,13 @@
                   class="h-64 w-full object-cover object-center"
                 />
                 <div class="p-6">
-                  <h2 class="text-xl font-semibold mb-2">Project Name</h2>
+                  <h2 class="text-xl text-gray-900 font-semibold mb-2">
+                    Project Name
+                  </h2>
                   <p class="text-gray-500 text-sm mb-4">
                     Technologies used: HTML, CSS, JavaScript
                   </p>
-                  <p class="text-lg mb-4">
-                    A short description of the project.
-                  </p>
-                  <a href="#" class="text-blue-500 hover:text-blue-700"
-                    >View project &rarr;</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div>
-              <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                <img
-                  src="https://placehold.it/600x400"
-                  alt="Project Image"
-                  class="h-64 w-full object-cover object-center"
-                />
-                <div class="p-6">
-                  <h2 class="text-xl font-semibold mb-2">Project Name</h2>
-                  <p class="text-gray-500 text-sm mb-4">
-                    Technologies used: HTML, CSS, JavaScript
-                  </p>
-                  <p class="text-lg mb-4">
-                    A short description of the project.
-                  </p>
-                  <a href="#" class="text-blue-500 hover:text-blue-700"
-                    >View project &rarr;</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div>
-              <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                <img
-                  src="https://placehold.it/600x400"
-                  alt="Project Image"
-                  class="h-64 w-full object-cover object-center"
-                />
-                <div class="p-6">
-                  <h2 class="text-xl font-semibold mb-2">Project Name</h2>
-                  <p class="text-gray-500 text-sm mb-4">
-                    Technologies used: HTML, CSS, JavaScript
-                  </p>
-                  <p class="text-lg mb-4">
-                    A short description of the project.
-                  </p>
-                  <a href="#" class="text-blue-500 hover:text-blue-700"
-                    >View project &rarr;</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div>
-              <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                <img
-                  src="https://placehold.it/600x400"
-                  alt="Project Image"
-                  class="h-64 w-full object-cover object-center"
-                />
-                <div class="p-6">
-                  <h2 class="text-xl font-semibold mb-2">Project Name</h2>
-                  <p class="text-gray-500 text-sm mb-4">
-                    Technologies used: HTML, CSS, JavaScript
-                  </p>
-                  <p class="text-lg mb-4">
-                    A short description of the project.
-                  </p>
-                  <a href="#" class="text-blue-500 hover:text-blue-700"
-                    >View project &rarr;</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div>
-              <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                <img
-                  src="https://placehold.it/600x400"
-                  alt="Project Image"
-                  class="h-64 w-full object-cover object-center"
-                />
-                <div class="p-6">
-                  <h2 class="text-xl font-semibold mb-2">Project Name</h2>
-                  <p class="text-gray-500 text-sm mb-4">
-                    Technologies used: HTML, CSS, JavaScript
-                  </p>
-                  <p class="text-lg mb-4">
+                  <p class="text-lg text-gray-900 mb-4">
                     A short description of the project.
                   </p>
                   <a href="#" class="text-blue-500 hover:text-blue-700"
@@ -465,8 +315,8 @@
       <div class="w-full m-auto max-w-7xl py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
         <div class="w-full m-auto">
           <div class="text-center mb-16">
-            <h1 class="text-4xl font-bold mb-4">About Me</h1>
-            <p class="text-lg">
+            <h1 class="text-4xl text-gray-900 font-bold mb-4">About Me</h1>
+            <p class="text-lg text-gray-600">
               Here's a little bit about myself and my background
             </p>
             <div class="inline-flex items-center justify-center w-full">
@@ -500,17 +350,17 @@
               />
             </div>
             <div class="w-full md:w-3/4 px-4">
-              <p class="text-lg mb-4">
+              <p class="text-lg text-gray-600 mb-4">
                 Hi there! My name is [Your Name] and I'm a [Your Profession]
                 with [Number] years of experience in the field.
               </p>
-              <p class="text-lg mb-4">
+              <p class="text-lg text-gray-600 mb-4">
                 Throughout my career, I've worked on a variety of projects and
                 gained expertise in [Areas of Expertise]. I'm passionate about
                 [What You're Passionate About] and always strive to deliver the
                 best results for my clients.
               </p>
-              <p class="text-lg mb-4">
+              <p class="text-lg text-gray-600 mb-4">
                 In my free time, I enjoy [Hobbies and Interests]. I'm always
                 looking for new challenges and opportunities to learn and grow
                 in my field.
