--- a/v2/index.html
+++ b/v2/index.html
@@ -149,7 +149,9 @@
     <section id="blog">
       <div class="flex mx-auto max-w-7xl">
         <div class="w-full m-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
-          <div class="text-center w-full m-auto px-4 sm:px-6 lg:px-8 mb-16">
+          <div
+            class="text-center font-serif italic w-full m-auto px-4 sm:px-6 lg:px-8 mb-16"
+          >
             <h1 class="text-4xl text-gray-900 font-bold mb-4">My Journey</h1>
             <p class="text-lg text-gray-600">
               Follow along as I document and share my experiences
@@ -173,6 +175,76 @@
                     fill="currentColor"
                   />
                 </svg>
+              </div>
+            </div>
+          </div>
+          <div class="flex flex-col lg:items-start lg:flex-row">
+            <div
+              class="w-full flex items-center lg:pt-6 gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
+            >
+              <img
+                src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                alt=""
+                class="h-10 w-10 rounded-full bg-gray-50"
+              />
+              <div class="text-sm leading-6">
+                <p class="font-semibold text-gray-900">
+                  <a href="#"> John Bouakhasith </a>
+                </p>
+                <p class="text-gray-600">Posted on April 1st, 2023</p>
+              </div>
+            </div>
+            <div class="w-full">
+              <div
+                class="bg-white border-gray-200 lg:border-l-4 overflow-hidden"
+              >
+                <div class="text-gray-900 lg:p-6 pb-6 lg:pb-0>
+                  <h1 class="text-4xl text-gray-900 font-bold mb-4">
+                    Blog Post Header
+                  </h1>
+                  <p class="text-lg text-gray-600 mb-4">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed
+                    viverra. A cras semper auctor neque vitae tempus. Commodo
+                    nulla facilisi nullam vehicula ipsum a arcu cursus vitae.
+                    Fames ac turpis egestas maecenas pharetra convallis posuere
+                    morbi leo. Suscipit adipiscing bibendum est ultricies
+                    integer quis auctor elit sed. Morbi tristique senectus et
+                    netus et malesuada. Faucibus a pellentesque sit amet
+                    porttitor eget. Vivamus at augue eget arcu. Phasellus
+                    faucibus scelerisque eleifend donec pretium vulputate
+                    sapien.
+                  </p>
+                  <p class="text-lg text-gray-600 mb-4">
+                    Ac odio tempor orci dapibus ultrices in iaculis. Ipsum
+                    faucibus vitae aliquet nec ullamcorper sit amet risus
+                    nullam. Velit aliquet sagittis id consectetur purus ut
+                    faucibus. Habitant morbi tristique senectus et netus. In
+                    nulla posuere sollicitudin aliquam. Elementum pulvinar etiam
+                    non quam lacus suspendisse faucibus interdum posuere. Nunc
+                    congue nisi vitae suscipit tellus mauris a diam maecenas.
+                    Maecenas accumsan lacus vel facilisis volutpat est velit
+                    egestas. Morbi tincidunt ornare massa eget. Et tortor at
+                    risus viverra adipiscing at in tellus integer. Congue mauris
+                    rhoncus aenean vel elit scelerisque mauris.
+                  </p>
+                  <p class="text-lg text-gray-600 mb-4">
+                    Sed velit dignissim sodales ut eu sem integer vitae justo.
+                    Sit amet tellus cras adipiscing enim eu turpis egestas
+                    pretium. Ultrices tincidunt arcu non sodales neque. Sit amet
+                    dictum sit amet justo. Accumsan sit amet nulla facilisi
+                    morbi tempus iaculis urna id. Sodales neque sodales ut etiam
+                    sit amet nisl purus in. Pharetra sit amet aliquam id diam
+                    maecenas. Sapien eget mi proin sed libero enim sed faucibus
+                    turpis. Non pulvinar neque laoreet suspendisse interdum
+                    consectetur libero. Ut etiam sit amet nisl purus in. Aenean
+                    pharetra magna ac placerat.
+                  </p>
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >Read more &rarr;</a
+                  >
+                </div>
               </div>
             </div>
           </div>
@@ -254,7 +326,7 @@
     <section id="portfolio" class="bg-gray-100">
       <div class="w-full m-auto max-w-7xl py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
         <div class="w-full m-auto">
-          <div class="text-center mb-16">
+          <div class="text-center font-serif italic mb-16">
             <h1 class="text-4xl text-gray-900 font-bold mb-4">Portfolio</h1>
             <p class="text-lg text-gray-600">
               Take a look at some of my recent projects
@@ -314,7 +386,7 @@
     <section id="about" class="relative">
       <div class="w-full m-auto max-w-7xl py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
         <div class="w-full m-auto">
-          <div class="text-center mb-16">
+          <div class="text-center font-serif italic mb-16">
             <h1 class="text-4xl text-gray-900 font-bold mb-4">About Me</h1>
             <p class="text-lg text-gray-600">
               Here's a little bit about myself and my background
