--- a/v2/index.html
+++ b/v2/index.html
@@ -112,7 +112,7 @@
               >Hi. I'm John Bouakhasith,</span
             >
             <strong
-              class="text-yellow-300 text-shadow shadow-gray-950 text-3xl font-extrabold sm:text-4xl sm:block"
+              class="text-yellow-500 text-shadow shadow-gray-950 text-3xl font-extrabold sm:text-4xl sm:block"
             >
               Self-Taught Web Developer
             </strong>
@@ -146,179 +146,117 @@
     </section>
 
     <!-- Blog -->
-    <section id="blog">
-      <div class="flex mx-auto max-w-7xl">
-        <div class="w-full m-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
-          <div
-            class="text-center font-serif italic w-full m-auto px-4 sm:px-6 lg:px-8 mb-16"
+    <section class="py-10">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <h2 class="text-3xl font-extrabold tracking-tight text-gray-900">
+          Latest Blog Posts
+        </h2>
+        <ul
+          class="mt-4 grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"
+        >
+          <li
+            class="col-span-1 bg-white rounded-lg shadow divide-y divide-gray-200"
           >
-            <h1 class="text-4xl text-gray-900 font-bold mb-4">My Journey</h1>
-            <p class="text-lg text-gray-600">
-              Follow along as I document and share my experiences
-            </p>
-            <div class="inline-flex items-center justify-center w-full">
-              <hr
-                class="w-64 h-1 my-8 bg-gray-200 border-0 rounded dark:bg-gray-700"
-              />
-              <div
-                class="absolute px-4 -translate-x-1/2 bg-white left-1/2 dark:bg-gray-900"
-              >
-                <svg
-                  aria-hidden="true"
-                  class="w-5 h-5 text-gray-700 dark:text-gray-300"
-                  viewBox="0 0 24 27"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
+            <div class="w-full flex items-center justify-between p-6 space-x-6">
+              <div class="flex-1 truncate">
+                <a
+                  href="#"
+                  class="text-gray-900 font-medium hover:text-gray-600"
                 >
-                  <path
-                    d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
-                    fill="currentColor"
-                  />
-                </svg>
-              </div>
-            </div>
-          </div>
-          <div class="flex flex-col lg:items-start lg:flex-row">
-            <div
-              class="w-full flex items-center lg:pt-6 gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
-            >
-              <img
-                src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                alt=""
-                class="h-10 w-10 rounded-full bg-gray-50"
-              />
-              <div class="text-sm leading-6">
-                <p class="font-semibold text-gray-900">
-                  <a href="#"> John Bouakhasith </a>
+                  <h3 class="text-sm font-medium text-gray-900 truncate">
+                    Post Title 1
+                  </h3>
+                </a>
+                <p class="mt-1 text-sm text-gray-500">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Vivamus bibendum dolor at consequat rhoncus.
                 </p>
-                <p class="text-gray-600">Posted on April 1st, 2023</p>
               </div>
-            </div>
-            <div class="w-full">
-              <div
-                class="bg-white border-gray-200 lg:border-l-4 overflow-hidden"
-              >
-                <div class="text-gray-900 lg:p-6 pb-6 lg:pb-0>
-                  <h1 class="text-4xl text-gray-900 font-bold mb-4">
-                    Blog Post Header
-                  </h1>
-                  <p class="text-lg text-gray-600 mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed
-                    viverra. A cras semper auctor neque vitae tempus. Commodo
-                    nulla facilisi nullam vehicula ipsum a arcu cursus vitae.
-                    Fames ac turpis egestas maecenas pharetra convallis posuere
-                    morbi leo. Suscipit adipiscing bibendum est ultricies
-                    integer quis auctor elit sed. Morbi tristique senectus et
-                    netus et malesuada. Faucibus a pellentesque sit amet
-                    porttitor eget. Vivamus at augue eget arcu. Phasellus
-                    faucibus scelerisque eleifend donec pretium vulputate
-                    sapien.
-                  </p>
-                  <p class="text-lg text-gray-600 mb-4">
-                    Ac odio tempor orci dapibus ultrices in iaculis. Ipsum
-                    faucibus vitae aliquet nec ullamcorper sit amet risus
-                    nullam. Velit aliquet sagittis id consectetur purus ut
-                    faucibus. Habitant morbi tristique senectus et netus. In
-                    nulla posuere sollicitudin aliquam. Elementum pulvinar etiam
-                    non quam lacus suspendisse faucibus interdum posuere. Nunc
-                    congue nisi vitae suscipit tellus mauris a diam maecenas.
-                    Maecenas accumsan lacus vel facilisis volutpat est velit
-                    egestas. Morbi tincidunt ornare massa eget. Et tortor at
-                    risus viverra adipiscing at in tellus integer. Congue mauris
-                    rhoncus aenean vel elit scelerisque mauris.
-                  </p>
-                  <p class="text-lg text-gray-600 mb-4">
-                    Sed velit dignissim sodales ut eu sem integer vitae justo.
-                    Sit amet tellus cras adipiscing enim eu turpis egestas
-                    pretium. Ultrices tincidunt arcu non sodales neque. Sit amet
-                    dictum sit amet justo. Accumsan sit amet nulla facilisi
-                    morbi tempus iaculis urna id. Sodales neque sodales ut etiam
-                    sit amet nisl purus in. Pharetra sit amet aliquam id diam
-                    maecenas. Sapien eget mi proin sed libero enim sed faucibus
-                    turpis. Non pulvinar neque laoreet suspendisse interdum
-                    consectetur libero. Ut etiam sit amet nisl purus in. Aenean
-                    pharetra magna ac placerat.
-                  </p>
-                  <a href="#" class="text-blue-500 hover:text-blue-700"
-                    >Read more &rarr;</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="flex flex-col lg:items-start lg:flex-row">
-            <div
-              class="w-full flex items-center lg:pt-6 gap-x-4 md:w-1/4 lg:w-1/4 mb-6"
-            >
               <img
-                src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                class="flex-shrink-0 h-10 w-10 object-cover rounded-full"
+                src="https://picsum.photos/id/237/200/200"
                 alt=""
-                class="h-10 w-10 rounded-full bg-gray-50"
               />
-              <div class="text-sm leading-6">
-                <p class="font-semibold text-gray-900">
-                  <a href="#"> John Bouakhasith </a>
+            </div>
+          </li>
+
+          <li
+            class="col-span-1 bg-white rounded-lg shadow divide-y divide-gray-200"
+          >
+            <div class="w-full flex items-center justify-between p-6 space-x-6">
+              <div class="flex-1 truncate">
+                <a
+                  href="#"
+                  class="text-gray-900 font-medium hover:text-gray-600"
+                >
+                  <h3 class="text-sm font-medium text-gray-900 truncate">
+                    Post Title 2
+                  </h3>
+                </a>
+                <p class="mt-1 text-sm text-gray-500">
+                  Mauris ac sapien sit amet est rhoncus lobortis eu vel eros.
                 </p>
-                <p class="text-gray-600">Posted on April 1st, 2023</p>
               </div>
+              <img
+                class="flex-shrink-0 h-10 w-10 object-cover rounded-full"
+                src="https://picsum.photos/id/10/200/200"
+                alt=""
+              />
             </div>
-            <div class="w-full">
-              <div
-                class="bg-white border-gray-200 lg:border-l-4 overflow-hidden"
-              >
-                <div class="text-gray-900 lg:p-6">
-                  <h1 class="text-4xl text-gray-900 font-bold mb-4">
-                    Blog Post Header
-                  </h1>
-                  <p class="text-lg text-gray-600 mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed
-                    viverra. A cras semper auctor neque vitae tempus. Commodo
-                    nulla facilisi nullam vehicula ipsum a arcu cursus vitae.
-                    Fames ac turpis egestas maecenas pharetra convallis posuere
-                    morbi leo. Suscipit adipiscing bibendum est ultricies
-                    integer quis auctor elit sed. Morbi tristique senectus et
-                    netus et malesuada. Faucibus a pellentesque sit amet
-                    porttitor eget. Vivamus at augue eget arcu. Phasellus
-                    faucibus scelerisque eleifend donec pretium vulputate
-                    sapien.
-                  </p>
-                  <p class="text-lg text-gray-600 mb-4">
-                    Ac odio tempor orci dapibus ultrices in iaculis. Ipsum
-                    faucibus vitae aliquet nec ullamcorper sit amet risus
-                    nullam. Velit aliquet sagittis id consectetur purus ut
-                    faucibus. Habitant morbi tristique senectus et netus. In
-                    nulla posuere sollicitudin aliquam. Elementum pulvinar etiam
-                    non quam lacus suspendisse faucibus interdum posuere. Nunc
-                    congue nisi vitae suscipit tellus mauris a diam maecenas.
-                    Maecenas accumsan lacus vel facilisis volutpat est velit
-                    egestas. Morbi tincidunt ornare massa eget. Et tortor at
-                    risus viverra adipiscing at in tellus integer. Congue mauris
-                    rhoncus aenean vel elit scelerisque mauris.
-                  </p>
-                  <p class="text-lg text-gray-600 mb-4">
-                    Sed velit dignissim sodales ut eu sem integer vitae justo.
-                    Sit amet tellus cras adipiscing enim eu turpis egestas
-                    pretium. Ultrices tincidunt arcu non sodales neque. Sit amet
-                    dictum sit amet justo. Accumsan sit amet nulla facilisi
-                    morbi tempus iaculis urna id. Sodales neque sodales ut etiam
-                    sit amet nisl purus in. Pharetra sit amet aliquam id diam
-                    maecenas. Sapien eget mi proin sed libero enim sed faucibus
-                    turpis. Non pulvinar neque laoreet suspendisse interdum
-                    consectetur libero. Ut etiam sit amet nisl purus in. Aenean
-                    pharetra magna ac placerat.
-                  </p>
-                  <a href="#" class="text-blue-500 hover:text-blue-700"
-                    >Read more &rarr;</a
-                  >
-                </div>
+          </li>
+
+          <li
+            class="col-span-1 bg-white rounded-lg shadow divide-y divide-gray-200"
+          >
+            <div class="w-full flex items-center justify-between p-6 space-x-6">
+              <div class="flex-1 truncate">
+                <a
+                  href="#"
+                  class="text-gray-900 font-medium hover:text-gray-600"
+                >
+                  <h3 class="text-sm font-medium text-gray-900 truncate">
+                    Post Title 3
+                  </h3>
+                </a>
+                <p class="mt-1 text-sm text-gray-500">
+                  Pellentesque at lacus vel nibh ultricies dapibus eget sed
+                  augue.
+                </p>
               </div>
+              <img
+                class="flex-shrink-0 h-10 w-10 object-cover rounded-full"
+                src="https://picsum.photos/id/1005/200/200"
+                alt=""
+              />
             </div>
-          </div>
-        </div>
+          </li>
+
+          <li
+            class="col-span-1 bg-white rounded-lg shadow divide-y divide-gray-200"
+          >
+            <div class="w-full flex items-center justify-between p-6 space-x-6">
+              <div class="flex-1 truncate">
+                <a
+                  href="#"
+                  class="text-gray-900 font-medium hover:text-gray-600"
+                >
+                  <h3 class="text-sm font-medium text-gray 900 truncate">
+                    Post Title 4
+                  </h3>
+                </a>
+                <p class="mt-1 text-sm text-gray-500">
+                  Nulla semper justo sed dolor imperdiet, eget faucibus tortor
+                  consectetur.
+                </p>
+              </div>
+              <img
+                class="flex-shrink-0 h-10 w-10 object-cover rounded-full"
+                src="https://picsum.photos/id/1025/200/200"
+                alt=""
+              />
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
 
