--- a/v2/index.html
+++ b/v2/index.html
@@ -128,7 +128,7 @@
               <button
                 class="block w-full sm:w-auto py-3 px-12 text-sm font-medium text-gray-900 bg-gray-50 rounded hover:text-gray-50 hover:bg-blue-500"
               >
-                Follow Me
+                Join Me
               </button>
             </a>
           </div>
@@ -146,117 +146,113 @@
     </section>
 
     <!-- Blog -->
-    <section class="py-10">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-3xl font-extrabold tracking-tight text-gray-900">
-          Latest Blog Posts
-        </h2>
-        <ul
-          class="mt-4 grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"
-        >
-          <li
-            class="col-span-1 bg-white rounded-lg shadow divide-y divide-gray-200"
-          >
-            <div class="w-full flex items-center justify-between p-6 space-x-6">
-              <div class="flex-1 truncate">
+    <section id="blog">
+      <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8 lg:py-32">
+        <div class="text-center font-serif italic mb-16">
+          <h1 class="text-4xl text-gray-900 font-bold mb-4">
+            Thinking Out Loud
+          </h1>
+          <p class="text-lg text-gray-600">
+            My web development and personal blog
+          </p>
+          <div class="inline-flex items-center justify-center w-full">
+            <hr
+              class="w-64 h-1 my-8 bg-gray-200 border-0 rounded dark:bg-gray-700"
+            />
+            <div
+              class="absolute px-4 -translate-x-1/2 bg-white left-1/2 dark:bg-gray-900"
+            >
+              <svg
+                aria-hidden="true"
+                class="w-5 h-5 text-gray-700 dark:text-gray-300"
+                viewBox="0 0 24 27"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
+                  fill="currentColor"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="mt-4 flex flex-wrap -mx-4">
+          <div class="w-full md:w-1/3 px-4 mb-8">
+            <div class="bg-white rounded-lg shadow divide-y divide-gray-200">
+              <div class="p-6">
                 <a
                   href="#"
                   class="text-gray-900 font-medium hover:text-gray-600"
                 >
-                  <h3 class="text-sm font-medium text-gray-900 truncate">
+                  <h3 class="text-lg font-medium text-gray-900 truncate">
                     Post Title 1
                   </h3>
                 </a>
+                <p class="mt-1 text-sm text-gray-500">April 1, 2023</p>
                 <p class="mt-1 text-sm text-gray-500">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Vivamus bibendum dolor at consequat rhoncus.
                 </p>
               </div>
               <img
-                class="flex-shrink-0 h-10 w-10 object-cover rounded-full"
-                src="https://picsum.photos/id/237/200/200"
+                class="h-32 w-full object-cover rounded-b-lg"
+                src="https://picsum.photos/id/237/800/533"
                 alt=""
               />
             </div>
-          </li>
+          </div>
 
-          <li
-            class="col-span-1 bg-white rounded-lg shadow divide-y divide-gray-200"
-          >
-            <div class="w-full flex items-center justify-between p-6 space-x-6">
-              <div class="flex-1 truncate">
+          <div class="w-full md:w-1/3 px-4 mb-8">
+            <div class="bg-white rounded-lg shadow divide-y divide-gray-200">
+              <div class="p-6">
                 <a
                   href="#"
                   class="text-gray-900 font-medium hover:text-gray-600"
                 >
-                  <h3 class="text-sm font-medium text-gray-900 truncate">
+                  <h3 class="text-lg font-medium text-gray-900 truncate">
                     Post Title 2
                   </h3>
                 </a>
+                <p class="mt-1 text-sm text-gray-500">March 31, 2023</p>
                 <p class="mt-1 text-sm text-gray-500">
                   Mauris ac sapien sit amet est rhoncus lobortis eu vel eros.
                 </p>
               </div>
               <img
-                class="flex-shrink-0 h-10 w-10 object-cover rounded-full"
-                src="https://picsum.photos/id/10/200/200"
+                class="h-32 w-full object-cover rounded-b-lg"
+                src="https://picsum.photos/id/10/800/533"
                 alt=""
               />
             </div>
-          </li>
+          </div>
 
-          <li
-            class="col-span-1 bg-white rounded-lg shadow divide-y divide-gray-200"
-          >
-            <div class="w-full flex items-center justify-between p-6 space-x-6">
-              <div class="flex-1 truncate">
+          <div class="w-full md:w-1/3 px-4 mb-8">
+            <div class="bg-white rounded-lg shadow divide-y divide-gray-200">
+              <div class="p-6">
                 <a
                   href="#"
                   class="text-gray-900 font-medium hover:text-gray-600"
                 >
-                  <h3 class="text-sm font-medium text-gray-900 truncate">
+                  <h3 class="text-lg font-medium text-gray-900 truncate">
                     Post Title 3
                   </h3>
                 </a>
+                <p class="mt-1 text-sm text-gray-500">March 30, 2023</p>
                 <p class="mt-1 text-sm text-gray-500">
                   Pellentesque at lacus vel nibh ultricies dapibus eget sed
                   augue.
                 </p>
               </div>
               <img
-                class="flex-shrink-0 h-10 w-10 object-cover rounded-full"
-                src="https://picsum.photos/id/1005/200/200"
+                class="h-32 w-full object-cover rounded-b-lg"
+                src="https://picsum.photos/id/1005/800/533"
                 alt=""
               />
             </div>
-          </li>
-
-          <li
-            class="col-span-1 bg-white rounded-lg shadow divide-y divide-gray-200"
-          >
-            <div class="w-full flex items-center justify-between p-6 space-x-6">
-              <div class="flex-1 truncate">
-                <a
-                  href="#"
-                  class="text-gray-900 font-medium hover:text-gray-600"
-                >
-                  <h3 class="text-sm font-medium text-gray 900 truncate">
-                    Post Title 4
-                  </h3>
-                </a>
-                <p class="mt-1 text-sm text-gray-500">
-                  Nulla semper justo sed dolor imperdiet, eget faucibus tortor
-                  consectetur.
-                </p>
-              </div>
-              <img
-                class="flex-shrink-0 h-10 w-10 object-cover rounded-full"
-                src="https://picsum.photos/id/1025/200/200"
-                alt=""
-              />
-            </div>
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
     </section>
 
