changed hero section and link colors

--- a/v2/index.html
+++ b/v2/index.html
@@ -19,22 +19,22 @@
           <div class="hidden lg:flex items-center">
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-blue-500"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:bg-gray-200"
               >Home</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-blue-500"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:bg-gray-200"
               >Blog</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-blue-500"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:bg-gray-200"
               >Portfolio</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-blue-500"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-900 hover:bg-gray-200"
               >About</a
             >
           </div>
@@ -70,25 +70,25 @@
         >
           <a
             href="#"
-            class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
+            class="block px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-200"
           >
             Home
           </a>
           <a
             href="#"
-            class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
+            class="block px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-200"
           >
             Blog
           </a>
           <a
             href="#"
-            class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
+            class="block px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-200"
           >
             Portfolio
           </a>
           <a
             href="#"
-            class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-blue-500"
+            class="block px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-200"
           >
             About
           </a>
@@ -108,25 +108,21 @@
       >
         <div class="mx-auto max-w-xl text-center">
           <h1 class="text-3xl font-extrabold sm:text-4xl">
-            <span class="text-slate-50 text-shadow shadow-gray-950"
-              >Hi. I'm John Bouakhasith,</span
-            >
+            <span class="text-slate-50">Hi. I'm John Bouakhasith,</span>
             <strong
-              class="text-yellow-500 text-shadow shadow-gray-950 text-3xl font-extrabold sm:text-4xl sm:block"
+              class="text-yellow-300 text-3xl font-extrabold sm:text-4xl sm:block"
             >
               Self-Taught Web Developer
             </strong>
           </h1>
-          <p
-            class="text-slate-50 text-shadow shadow-gray-950 mt-4 sm:text-xl sm:leading-relaxed"
-          >
+          <p class="text-slate-50 mt-4 sm:text-xl sm:leading-relaxed">
             I am on a journey to overcome obstacles and achieve success as a
             self-taught web developer
           </p>
           <div class="mt-8 flex flex-wrap justify-center">
             <a href="#">
               <button
-                class="block w-full sm:w-auto py-3 px-12 text-sm font-medium text-gray-900 bg-gray-50 rounded hover:text-gray-50 hover:bg-blue-500"
+                class="block w-full sm:w-auto py-3 px-12 text-sm font-medium text-gray-900 bg-gray-50 rounded hover:text-gray-200 hover:bg-gray-500"
               >
                 Join Me
               </button>
