replaced blog post images with read more link

--- a/v2/index.html
+++ b/v2/index.html
@@ -191,12 +191,12 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Vivamus bibendum dolor at consequat rhoncus.
                 </p>
+                <div class="mt-4">
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >Read More &rarr;</a
+                  >
+                </div>
               </div>
-              <img
-                class="h-32 w-full object-cover rounded-b-lg"
-                src="https://picsum.photos/id/237/800/533"
-                alt=""
-              />
             </div>
           </div>
 
@@ -208,19 +208,20 @@
                   class="text-gray-900 font-medium hover:text-gray-600"
                 >
                   <h3 class="text-lg font-medium text-gray-900 truncate">
-                    Post Title 2
+                    Post Title 1
                   </h3>
                 </a>
-                <p class="mt-1 text-sm text-gray-500">March 31, 2023</p>
+                <p class="mt-1 text-sm text-gray-500">April 1, 2023</p>
                 <p class="mt-1 text-sm text-gray-500">
-                  Mauris ac sapien sit amet est rhoncus lobortis eu vel eros.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Vivamus bibendum dolor at consequat rhoncus.
                 </p>
+                <div class="mt-4">
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >Read More &rarr;</a
+                  >
+                </div>
               </div>
-              <img
-                class="h-32 w-full object-cover rounded-b-lg"
-                src="https://picsum.photos/id/10/800/533"
-                alt=""
-              />
             </div>
           </div>
 
@@ -232,20 +233,20 @@
                   class="text-gray-900 font-medium hover:text-gray-600"
                 >
                   <h3 class="text-lg font-medium text-gray-900 truncate">
-                    Post Title 3
+                    Post Title 1
                   </h3>
                 </a>
-                <p class="mt-1 text-sm text-gray-500">March 30, 2023</p>
+                <p class="mt-1 text-sm text-gray-500">April 1, 2023</p>
                 <p class="mt-1 text-sm text-gray-500">
-                  Pellentesque at lacus vel nibh ultricies dapibus eget sed
-                  augue.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Vivamus bibendum dolor at consequat rhoncus.
                 </p>
+                <div class="mt-4">
+                  <a href="#" class="text-blue-500 hover:text-blue-700"
+                    >Read More &rarr;</a
+                  >
+                </div>
               </div>
-              <img
-                class="h-32 w-full object-cover rounded-b-lg"
-                src="https://picsum.photos/id/1005/800/533"
-                alt=""
-              />
             </div>
           </div>
         </div>
@@ -302,7 +303,7 @@
                     A short description of the project.
                   </p>
                   <a href="#" class="text-blue-500 hover:text-blue-700"
-                    >View project &rarr;</a
+                    >View Project &rarr;</a
                   >
                 </div>
               </div>
